fix: [news] fixed a layout issue when using slides with ion-list

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -47,3 +47,13 @@ ion-navbar{
 .toolbar-title {
   color: #F8F8F8;
 }
+
+
+.swiper-slide{
+    overflow-y: scroll;
+    display: block;
+}
+
+ion-slide{
+    height: auto;
+}
